--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,3 +14,6 @@ defaults:
       type: "bugzilla"
     values:
       layout: "bugzilla"
+
+webmaster_verifications:
+  google: "ED4N-AKhKPU0x6EQ_bMwQx6v_wH0eQn6FQm8szzaOzA"
